--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "react-apexcharts": "^1.4.0",
         "react-dom": "^17.0.2",
         "react-helmet": "^6.1.0",
+        "react-hook-form": "^7.31.2",
         "react-query": "^3.39.0",
         "react-router-dom": "^5.3.3",
         "react-scripts": "4.0.3",
