--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "react-scripts": "4.0.3",
         "recoil": "^0.7.3-alpha.2",
         "styled-components": "^5.3.1",
+        "swiper": "6.8.4",
         "typescript": "^4.4.4",
         "web-vitals": "^1.1.2"
     },
