--- a/package.json
+++ b/package.json
@@ -7,25 +7,25 @@
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
-        "@types/jest": "^27.0.2",
-        "@types/node": "^16.11.1",
-        "@types/react": "^17.0.30",
-        "@types/react-dom": "^17.0.9",
+        "@types/jest": "^28.1.3",
+        "@types/node": "^18.0.0",
+        "@types/react": "^18.0.14",
+        "@types/react-dom": "^18.0.5",
         "apexcharts": "^3.35.2",
-        "framer-motion": "^6.3.3",
+        "framer-motion": "^6.3.15",
         "gh-pages": "^3.2.3",
         "react": "^17.0.2",
         "react-apexcharts": "^1.4.0",
         "react-dom": "^17.0.2",
         "react-helmet": "^6.1.0",
         "react-hook-form": "^7.31.2",
-        "react-query": "^3.39.0",
+        "react-query": "^3.39.1",
         "react-router-dom": "^5.3.3",
         "react-scripts": "4.0.3",
         "recoil": "^0.7.3-alpha.2",
         "styled-components": "^5.3.1",
-        "swiper": "6.8.4",
-        "typescript": "^4.4.4",
+        "swiper": "^8.2.4",
+        "typescript": "^4.7.4",
         "web-vitals": "^1.1.2"
     },
     "scripts": {
@@ -57,7 +57,8 @@
     "devDependencies": {
         "@types/react-helmet": "^6.1.5",
         "@types/react-router-dom": "^5.3.3",
-        "@types/styled-components": "^5.1.15"
+        "@types/styled-components": "^5.1.15",
+        "@types/swiper": "^6.0.0"
     },
     "homepage": "https://sso-hyeon.github.io/react-movie-app"
 }
